--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,12 @@ layout: default
 path: home
 ---
 
-<div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
-  <h1 class="text-5xl lg:text-7xl font-bold tracking-tighter bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-indigo-500">
-    Matthew Zhu
+<div class="h-screen flex flex-col lg:flex-row justify-center items-center">
+  <h1 class="font-rubik-mono-one py-0 text-5xl text-gray-50 text-right font-bold tracking-tighter drop-shadow-2xl lg:w-3/12 lg:text-7xl">
+    BLUE TICK
   </h1>
-  <article class="prose lg:prose-xl py-8">
-    <a href="mailto:mattz496@gmail.com">contact</a>
-  </article>
+  <div class="w-0 h-1/4 lg:w-3/12"><!--spacing for the logo--></div>
+  <div class="drop-shadow-2xl lg:w-3/12">
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1237713478&color=%235594fd&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/blueticksound" title="blue tick" target="_blank" style="color: #cccccc; text-decoration: none;">blue tick</a> · <a href="https://soundcloud.com/blueticksound/felix-cartal-feat-elohim-nothing-good-comes-easy-blue-tick-remix" title="Felix Cartal feat. Elohim - Nothing Good Comes Easy (blue tick remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Felix Cartal feat. Elohim - Nothing Good Comes Easy (blue tick remix)</a></div>
+  </div>
 </div>
