--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@ layout: default
 path: home
 ---
 
-<div class="h-screen flex flex-col lg:flex-row justify-center items-center">
+<div class="bg-bluetick bg-center bg-no-repeat bg-cover w-full h-full flex flex-col lg:flex-row justify-center items-center">
   <h1 class="font-rubik-mono-one py-0 text-5xl text-gray-50 text-right font-bold tracking-tighter drop-shadow-2xl lg:w-3/12 lg:text-7xl">
     BLUE TICK
   </h1>
