Add build date, make navbar fixed

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@ path: home
   </h1>
   <div class="w-0 h-1/4 lg:w-3/12"><!--spacing for the logo--></div>
   <div class="drop-shadow-2xl lg:w-3/12">
+    <p>{{ generated }}</p>
     <!--iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1237713478&color=%235594fd&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/blueticksound" title="blue tick" target="_blank" style="color: #cccccc; text-decoration: none;">blue tick</a> · <a href="https://soundcloud.com/blueticksound/felix-cartal-feat-elohim-nothing-good-comes-easy-blue-tick-remix" title="Felix Cartal feat. Elohim - Nothing Good Comes Easy (blue tick remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Felix Cartal feat. Elohim - Nothing Good Comes Easy (blue tick remix)</a></div-->
   </div>
 </div>
