--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,15 @@ layout: default
 path: home
 ---
 
-<div class="bg-bluetick bg-center bg-no-repeat bg-cover w-full h-full flex flex-col lg:flex-row justify-center items-center">
-  <h1 class="font-rubik-mono-one py-0 text-5xl text-gray-50 text-right font-bold tracking-tighter drop-shadow-2xl lg:w-3/12 lg:text-7xl">
-    BLUE TICK
-  </h1>
-  <div class="w-0 h-1/4 lg:w-3/12"><!--spacing for the logo--></div>
-  <div class="drop-shadow-2xl lg:w-3/12">
-    <p>{{ generated }}</p>
+<div class="bg-bluetick bg-center bg-no-repeat bg-cover w-full h-full flex max-lg:flex-col max-lg:justify-between lg:flex-row lg:justify-center items-center font-rubik-mono-one py-0">
+  <ul class="text-7xl text-gray-50 text-right tracking-tighter drop-shadow-2xl space-y-4 lg:w-3/12 max-lg:w-full max-lg:px-8 max-lg:py-8">
+    <li><a>Store</a></li>
+    <li><a href="/blog" target="_blank">Blog</a></li>
+  </ul>
+  <div class="lg:w-3/12"><!--spacing for the logo--></div>
+  <ul class="text-5xl text-gray-50 text-left tracking-tighter drop-shadow-2xl space-y-4 lg:w-3/12 max-lg:w-full max-lg:px-8 max-lg:py-8">
+    <li><a href="https://instagram.com/blueticksound" target="_blank">Instagram</a></li>
+    <li><a href="https://soundcloud.com/blueticksound" target="_blank">Soundcloud</a></li>
     <!--iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1237713478&color=%235594fd&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/blueticksound" title="blue tick" target="_blank" style="color: #cccccc; text-decoration: none;">blue tick</a> · <a href="https://soundcloud.com/blueticksound/felix-cartal-feat-elohim-nothing-good-comes-easy-blue-tick-remix" title="Felix Cartal feat. Elohim - Nothing Good Comes Easy (blue tick remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Felix Cartal feat. Elohim - Nothing Good Comes Easy (blue tick remix)</a></div-->
-  </div>
+  </ul>
 </div>
