--- a/src/about/index.html
+++ b/src/about/index.html
@@ -1,13 +1,12 @@
 ---
-title: Projects
-description: All projects I've contributed to that live on the internet, 2012-2022
+title: About
+description: About the blue tick project + all the music I've made or helped produce
 layout: default
 ---
 
 <div class="container max-w-3xl px-6">
   <h1 class="font-bold text-5xl lg:text-7xl">{{title}}</h1>
   <article class="prose lg:prose-xl my-8 mx-auto">
-    <p>Here's a selection of stuff I've contributed to that also lives on the internet, tagged and sorted by the time I started:</p>
     <div class="grid grid-cols-5 gap-6">
     {% for name, data in projects.projects %}
       <div class="text-right">
