--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@ path: home
 
 <div class="bg-bluetick bg-center bg-no-repeat bg-cover w-full h-full flex max-lg:flex-col max-lg:justify-between lg:flex-row lg:justify-center items-center font-rubik-mono-one py-0">
   <ul class="max-sm:text-5xl text-7xl text-gray-50 text-right tracking-tighter drop-shadow-2xl space-y-4 lg:w-3/12 max-lg:w-full max-lg:px-8 max-lg:py-8">
-    <li><a>Store</a></li>
-    <li><a href="/blog" target="_blank">Blog</a></li>
+    <li><a class="opacity-50">Store</a></li>
+    <li><a href="/blog">Blog</a></li>
   </ul>
   <div class="lg:w-3/12"><!--spacing for the logo--></div>
   <ul class="max-sm:text-4xl text-5xl text-gray-50 text-left tracking-tighter drop-shadow-2xl space-y-4 lg:w-3/12 max-lg:w-full max-lg:px-8 max-lg:py-8">
