--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@ path: home
   <ul class="max-sm:text-5xl text-7xl text-gray-50 text-right tracking-tighter drop-shadow-2xl space-y-4 lg:w-3/12 max-lg:w-full max-lg:px-8 max-lg:py-8">
     <li><a class="opacity-50">Store</a></li>
     <li><a href="/blog">Blog</a></li>
+    <li><a href="/about">About</a></li>
   </ul>
   <div class="lg:w-3/12"><!--spacing for the logo--></div>
   <ul class="max-sm:text-4xl text-5xl text-gray-50 text-left tracking-tighter drop-shadow-2xl space-y-4 lg:w-3/12 max-lg:w-full max-lg:px-8 max-lg:py-8">
