--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@ layout: default
 path: home
 ---
 
-<div id="pixi-renderer-container" class="absolute transition ease-in-out duration-1000"></div>
+<div id="pixi-renderer-container" class="absolute opacity-1"></div>
 <div class="bg-bluetick bg-center bg-no-repeat bg-cover w-full h-full flex max-lg:flex-col max-lg:justify-between lg:flex-row lg:justify-center items-center font-rubik-mono-one py-0">
   <ul class="max-sm:text-5xl text-7xl text-gray-50 text-right tracking-tighter drop-shadow-2xl space-y-4 lg:w-3/12 max-lg:w-full max-lg:px-8 max-lg:py-8">
     <li><a class="opacity-50">Store</a></li>
