--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,14 @@ layout: default
 path: home
 ---
 
-<div id="pixi-renderer-container" class="absolute"></div>
-<div class="bg-bluetick bg-center bg-no-repeat bg-cover w-full h-full flex max-lg:flex-col max-lg:justify-between lg:flex-row lg:justify-center items-center font-rubik-mono-one py-0">
+<!-- background -->
+<div class="z-0 w-full h-full overflow-hidden absolute">
+  <div class="bg-bluetick bg-center bg-no-repeat bg-cover w-full h-full zoom-fade"></div>
+</div>
+<!-- canvas -->
+<div id="pixi-renderer-container" class="z-0 absolute show-after-zoom-fade"></div>
+<!-- text -->
+<div class="z-10 w-full h-full flex max-lg:flex-col max-lg:justify-between lg:flex-row lg:justify-center items-center font-rubik-mono-one py-0">
   <ul class="max-sm:text-5xl text-7xl text-gray-50 text-right tracking-tighter drop-shadow-2xl space-y-4 lg:w-3/12 max-lg:w-full max-lg:px-8 max-lg:py-8">
     <li><a href="/blog">Blog</a></li>
     <li><a href="/about">About</a></li>
