Add favicons, add title

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
-title: Matthew Zhu
-description: Personal homepage for Matthew Zhu
+title: blue tick
+description: blue tick audiovisuals
 layout: default
 path: home
 ---
