--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@ path: home
 <!-- text -->
 <div class="z-10 w-full h-full flex max-lg:flex-col max-lg:justify-between lg:flex-row lg:justify-center items-center font-rubik-mono-one py-0">
   <ul class="max-sm:text-5xl text-7xl text-gray-50 text-right tracking-tighter drop-shadow-2xl space-y-4 lg:w-3/12 max-lg:w-full max-lg:px-8 max-lg:py-8">
-    <li><a href="/blog">Blog</a></li>
-    <li><a href="/about">About</a></li>
+    <li class="slide-up-base slide-up-1"><a href="/blog">Blog</a></li>
+    <li class="slide-up-base slide-up-2"><a href="/about">About</a></li>
   </ul>
   <div class="lg:w-3/12"><!--spacing for the logo--></div>
   <ul class="max-sm:text-4xl text-5xl text-gray-50 text-left tracking-tighter drop-shadow-2xl space-y-4 lg:w-3/12 max-lg:w-full max-lg:px-8 max-lg:py-8">
-    <li><a href="https://instagram.com/blueticksound" target="_blank">Instagram</a></li>
-    <li><a href="https://soundcloud.com/blueticksound" target="_blank">Soundcloud</a></li>
+    <li class="slide-up-base slide-up-3"><a href="https://instagram.com/blueticksound" target="_blank">Instagram</a></li>
+    <li class="slide-up-base slide-up-4"><a href="https://soundcloud.com/blueticksound" target="_blank">Soundcloud</a></li>
   </ul>
 </div>
